2002-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el (mime-w3m-preview-text/html): Bind
	`w3m-force-redisplay' with nil.

2002-02-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-buffer): Set default of `completing-read'.

2002-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-key-binding): Switch `w3m-mode-map',
	`mime-w3m-mode-map' and `mm-w3m-mode-map' when customizing.

2002-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el (mime-w3m-mode-command-alist): New variable.
	(mime-w3m-setup): Use it; invalidate widget button in
	`mime-w3m-mode-map'.
	(mime-w3m-keymap-property): Removed.
	(mime-w3m-preview-text/html): Add `text-rendered-by-mime-w3m' text
	property to the rendered area.
	(kill-new): Strip keymap properties from a killed string only if
	it has `text-rendered-by-mime-w3m' property.

2002-01-31  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-url-at-point): Remove all text-properties from url.

	* w3m-search.el (w3m-search): Remove all text-properties from
	default search value.

2002-01-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (w3m-search-word-at-point): New option.
	(w3m-search): Refer `w3m-search-word-at-point'.

2002-01-31  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-hns.el (shimbun-hns-expiration-days): New variable.

	* shimbun/sb-tcup.el (shimbun-headers): Check whether the header
	is already retrieved.

2002-01-31  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-content-type-alist): Added text/html.
	(octet-magic-type-alist): Likewise.
	(octet-type-filter-alist): Likewise;
	Added `guess';
	Changed result type of gzip as `guess'.
	(octet-find-file-hook): New hook.
	(octet-find-file): Run it.
	(octet-filter-guess): New function.
	(octet-buffer): Fix.

2002-01-30  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (toplevel): Require 'static.
	(octet-html-render-function): Changed default value to
	`octet-w3m-region.'